Add deleteDuplication.