@@ -1,20 +1,24 @@
-package com.company;
+package com.company.JvmExplore;
 
 import java.util.ArrayList;
 import java.util.List;
 
-public class HeapOOM {
+/**
+ * -XX:PermSize=10M -XX:MaxPermSize=
+ * Output:
+ * Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option PermSize; support was removed in 8.0
+ * Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option MaxPermSize; support was removed in 8.0
+ */
 
-    public static class OOMObject {
+/**
+ * -Xms20m -Xmx20m
+ */
 
-    }
-
+public class RuntimeConstantPoolOOM {
     public static void main(String[] args) {
-	// write your code here
-        List<OOMObject> objects = new ArrayList<>();
+        List<String> list = new ArrayList<>();
         while (true) {
-            objects.add(new OOMObject());
-            System.out.println(System.currentTimeMillis());
+            list.add(" ".intern());
         }
     }
 }
@@ -27,5 +31,8 @@ Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
 	at java.base/java.util.ArrayList.grow(ArrayList.java:242)
 	at java.base/java.util.ArrayList.add(ArrayList.java:467)
 	at java.base/java.util.ArrayList.add(ArrayList.java:480)
-	at com.company.HeapOOM.main(HeapOOM.java:16)
+	at com.company.JvmExplore.RuntimeConstantPoolOOM.main(RuntimeConstantPoolOOM.java:16)
 *///:~
+
+
+
